hero first draft

--- a/index.html
+++ b/index.html
@@ -1,13 +1,285 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+          integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Quicksand&display=swap" rel="stylesheet">
+
+
     <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/js/main.js"></script>
-  </body>
+
+    <style>
+        #container {
+            padding: 1.2rem 1.2rem 10rem;
+        }
+
+        .swiper {
+            width: 100%;
+            height: 100%;
+        }
+
+    </style>
+</head>
+<body>
+<div id="container">
+
+    <section class="hero">
+
+        <h1 class='title'>DOMESTICKA</h1>
+
+        <div class="swiper hero hero-swiper">
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide hero-swiper-slide">
+                    <div class="swiper_item hero_swiper_item">
+                        <img src="./img/ali-jouyandeh-bodgc6H44FA-unsplash.jpg" alt="">
+                        <div class="text">
+                            <P>Gabriela SIlveria</P>
+                            <h1>Product Photography For <br/>
+                                Jewlery && small Objects</h1>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide hero-swiper-slide">
+                    <div class="hero_swiper_item">
+                        <img src="./img/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="">
+                        <div class="text">
+                            <P>Gabriela SIlveria</P>
+                            <h1>Product Photography For <br/>
+                                Jewlery && small Objects</h1>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide hero-swiper-slide">
+                    <div class="hero_swiper_item">
+                        <img src="./img/julian-wan-WNoLnJo7tS8-unsplash.jpg" alt="">
+                        <div class="text">
+                            <P>Gabriela SIlveria</P>
+                            <h1>Product Photography For <br/>
+                                Jewlery && small Objects</h1>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide hero-swiper-slide">
+                    <div class="hero_swiper_item">
+                        <img src="./img/jurica-koletic-7YVZYZeITc8-unsplash.jpg" alt="">
+                        <div class="text">
+                            <P>Gabriela SIlveria</P>
+                            <h1>Product Photography For <br/>
+                                Jewlery && small Objects</h1>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide hero-swiper-slide">
+                    <div class="hero_swiper_item">
+                        <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="">
+                        <div class="text">
+                            <P>Gabriela SIlveria</P>
+                            <h1>Product Photography For <br/>
+                                Jewlery && small Objects</h1>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide hero-swiper-slide">
+                    <div class="hero_swiper_item">
+                        <img src="./img/tyler-nix-X2YO8KFxgEM-unsplash.jpg" alt="">
+                        <div class="text">
+                            <P>Gabriela SIlveria</P>
+                            <h1>Product Photography For <br/>
+                                Jewlery && small Objects</h1>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="swiper-scrollbar"></div>
+        </div>
+
+    </section>
+
+    <section class="others">
+
+        <header>
+            <h1>Others are watching</h1>
+            <button>Show More</button>
+        </header>
+
+        <div class="others_swiper_container">
+
+
+            <div class="swipers others_swiper">
+                <div class="swiper-wrappers others_swiper_wrapper">
+                    <div class="swiper-slides others_swiper_slide">
+                        <div class="card">
+
+                            <div class="thumbnail">
+                                <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                <p class="time">3h 4min</p>
+                            </div>
+
+                            <div class="text">
+
+                                <p class="card_title">Designing kawaii worlds: Spread joy threoug illustration</p>
+                                <p class="name">Becky Cas</p>
+                                <div class="info">
+                                    <p>3.3k</p>
+                                    <p>97% (38)</p>
+                                </div>
+
+                            </div>
+                            <div class="price">
+                                <p>9.99 US$</p>
+                                <p class="discount">9.99 US$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slides others_swiper_slide">
+                        <div class="card">
+
+                            <div class="thumbnail">
+                                <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                <p class="time">3h 4min</p>
+                            </div>
+
+                            <div class="text">
+
+                                <p class="card_title">Designing kawaii worlds: Spread joy threoug illustration</p>
+                                <p class="name">Becky Cas</p>
+                                <div class="info">
+                                    <p>3.3k</p>
+                                    <p>97% (38)</p>
+                                </div>
+
+                            </div>
+                            <div class="price">
+                                <p>9.99 US$</p>
+                                <p class="discount">9.99 US$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slides others_swiper_slide">
+                        <div class="card">
+
+                            <div class="thumbnail">
+                                <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                <p class="time">3h 4min</p>
+                            </div>
+
+                            <div class="text">
+
+                                <p class="card_title">Designing kawaii worlds: Spread joy threoug illustration</p>
+                                <p class="name">Becky Cas</p>
+                                <div class="info">
+                                    <p>3.3k</p>
+                                    <p>97% (38)</p>
+                                </div>
+
+                            </div>
+                            <div class="price">
+                                <p>9.99 US$</p>
+                                <p class="discount">9.99 US$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slides others_swiper_slide">
+                        <div class="card">
+
+                            <div class="thumbnail">
+                                <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                <p class="time">3h 4min</p>
+                            </div>
+
+                            <div class="text">
+
+                                <p class="card_title">Designing kawaii worlds: Spread joy threoug illustration</p>
+                                <p class="name">Becky Cas</p>
+                                <div class="info">
+                                    <p>3.3k</p>
+                                    <p>97% (38)</p>
+                                </div>
+
+                            </div>
+                            <div class="price">
+                                <p>9.99 US$</p>
+                                <p class="discount">9.99 US$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slides others_swiper_slide">
+                        <div class="card">
+
+                            <div class="thumbnail">
+                                <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                <p class="time">3h 4min</p>
+                            </div>
+
+                            <div class="text">
+
+                                <p class="card_title">Designing kawaii worlds: Spread joy threoug illustration</p>
+                                <p class="name">Becky Cas</p>
+                                <div class="info">
+                                    <p>3.3k</p>
+                                    <p>97% (38)</p>
+                                </div>
+
+                            </div>
+                            <div class="price">
+                                <p>9.99 US$</p>
+                                <p class="discount">9.99 US$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+
+    <section class="featured">
+        <header><h1>Featured Projects</h1></header>
+
+        <div class="featured_grid">
+            <div class="featured_card">
+                <a href="/">
+                    <img src="./img/tyler-nix-X2YO8KFxgEM-unsplash.jpg" alt="">
+                </a>
+            </div>
+            <div class="featured_card">
+                <a href="/">
+                    <img src="./img/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="">
+                </a>
+            </div>
+            <div class="featured_card">
+                <a href="/">
+                    <img src="./img/jurica-koletic-7YVZYZeITc8-unsplash.jpg" alt="">
+                </a>
+            </div>
+            <div class="featured_card">
+                <a href="/">
+                    <img src="./img/ali-jouyandeh-bodgc6H44FA-unsplash.jpg" alt="">
+                </a>
+            </div>
+        </div>
+    </section>
+
+
+</div>
+<script type="module" src="/js/main.js"></script>
+</body>
 </html>
