added course html page

--- a/index.html
+++ b/index.html
@@ -41,69 +41,69 @@
             <div class="swiper-wrapper">
 
                 <div class="swiper-slide hero-swiper-slide">
-                    <div class="swiper_item hero_swiper_item">
+                    <a href="/course.html" class="swiper_item hero_swiper_item">
                         <img src="./img/ali-jouyandeh-bodgc6H44FA-unsplash.jpg" alt="">
                         <div class="text">
                             <P>Gabriela SIlveria</P>
                             <h1>Product Photography For <br/>
                                 Jewlery && small Objects</h1>
                         </div>
-                    </div>
+                    </a>
                 </div>
 
                 <div class="swiper-slide hero-swiper-slide">
-                    <div class="hero_swiper_item">
+                    <a href="/course.html" class="hero_swiper_item">
                         <img src="./img/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="">
                         <div class="text">
                             <P>Gabriela SIlveria</P>
                             <h1>Product Photography For <br/>
                                 Jewlery && small Objects</h1>
                         </div>
-                    </div>
+                    </a>
                 </div>
 
                 <div class="swiper-slide hero-swiper-slide">
-                    <div class="hero_swiper_item">
+                    <a href="/course.html" class="hero_swiper_item">
                         <img src="./img/julian-wan-WNoLnJo7tS8-unsplash.jpg" alt="">
                         <div class="text">
                             <P>Gabriela SIlveria</P>
                             <h1>Product Photography For <br/>
                                 Jewlery && small Objects</h1>
                         </div>
-                    </div>
+                    </a>
                 </div>
 
                 <div class="swiper-slide hero-swiper-slide">
-                    <div class="hero_swiper_item">
+                    <a href="/course.html" class="hero_swiper_item">
                         <img src="./img/jurica-koletic-7YVZYZeITc8-unsplash.jpg" alt="">
                         <div class="text">
                             <P>Gabriela SIlveria</P>
                             <h1>Product Photography For <br/>
                                 Jewlery && small Objects</h1>
                         </div>
-                    </div>
+                    </a>
                 </div>
 
                 <div class="swiper-slide hero-swiper-slide">
-                    <div class="hero_swiper_item">
+                    <a href="/course.html" class="hero_swiper_item">
                         <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="">
                         <div class="text">
                             <P>Gabriela SIlveria</P>
                             <h1>Product Photography For <br/>
                                 Jewlery && small Objects</h1>
                         </div>
-                    </div>
+                    </a>
                 </div>
 
                 <div class="swiper-slide hero-swiper-slide">
-                    <div class="hero_swiper_item">
+                    <a href="/course.html" class="hero_swiper_item">
                         <img src="./img/tyler-nix-X2YO8KFxgEM-unsplash.jpg" alt="">
                         <div class="text">
                             <P>Gabriela SIlveria</P>
                             <h1>Product Photography For <br/>
                                 Jewlery && small Objects</h1>
                         </div>
-                    </div>
+                    </a>
                 </div>
 
             </div>
