--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
 
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Quicksand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Quicksand&display=swap"
+          rel="stylesheet">
 
 
     <title>Vite App</title>
@@ -115,12 +115,201 @@
     <section class="others">
 
         <header>
-            <h1>Others are watching</h1>
+            <h1>Others</h1>
             <button>Show More</button>
         </header>
 
         <div class="others_swiper_container">
 
+            <div class="swipers others_swiper">
+                <div class="swiper-wrappers others_swiper_wrapper">
+                    <div class="swiper-slides others_swiper_slide">
+                        <a href="/course.html">
+                            <div class="card">
+
+                                <div class="thumbnail">
+                                    <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                    <p class="time">3h 4min</p>
+                                </div>
+
+                                <div class="text">
+
+                                    <p class="card_title">Designing kawaii worlds: Spread joy threoug illustration</p>
+                                    <p class="name">Becky Cas</p>
+                                    <div class="info">
+                                        <p>3.3k</p>
+                                        <p>97% (38)</p>
+                                    </div>
+
+                                </div>
+                                <div class="price">
+                                    <p>9.99 US$</p>
+                                    <p class="discount">9.99 US$</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slides others_swiper_slide">
+
+                        <a href="/course.html">
+                            <div class="card">
+
+                                <div class="thumbnail">
+                                    <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                    <p class="time">3h 4min</p>
+                                </div>
+
+                                <div class="text">
+
+                                    <p class="card_title">Designing kawaii worlds: Spread joy threoug illustration</p>
+                                    <p class="name">Becky Cas</p>
+                                    <div class="info">
+                                        <p>3.3k</p>
+                                        <p>97% (38)</p>
+                                    </div>
+
+                                </div>
+                                <div class="price">
+                                    <p>9.99 US$</p>
+                                    <p class="discount">9.99 US$</p>
+                                </div>
+                            </div>
+                         </a>
+                    </div>
+                    <div class="swiper-slides others_swiper_slide">
+                        <a href="/course.html">
+                            <div class="card">
+
+                                <div class="thumbnail">
+                                    <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                    <p class="time">3h 4min</p>
+                                </div>
+
+                                <div class="text">
+
+                                    <p class="card_title">Designing kawaii worlds: Spread joy threoug illustration</p>
+                                    <p class="name">Becky Cas</p>
+                                    <div class="info">
+                                        <p>3.3k</p>
+                                        <p>97% (38)</p>
+                                    </div>
+
+                                </div>
+                                <div class="price">
+                                    <p>9.99 US$</p>
+                                    <p class="discount">9.99 US$</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slides others_swiper_slide">
+                        <a href="/course.html">
+                            <div class="card">
+
+                                <div class="thumbnail">
+                                    <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                    <p class="time">3h 4min</p>
+                                </div>
+
+                                <div class="text">
+
+                                    <p class="card_title">Designing kawaii worlds: Spread joy threoug illustration</p>
+                                    <p class="name">Becky Cas</p>
+                                    <div class="info">
+                                        <p>3.3k</p>
+                                        <p>97% (38)</p>
+                                    </div>
+
+                                </div>
+                                <div class="price">
+                                    <p>9.99 US$</p>
+                                    <p class="discount">9.99 US$</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slides others_swiper_slide">
+                        <a href="/course.html">
+                            <div class="card">
+
+                                <div class="thumbnail">
+                                    <img src="./img/linkedin-sales-solutions-pAtA8xe_iVM-unsplash.jpg" alt="card image">
+                                    <p class="time">3h 4min</p>
+                                </div>
+
+                                <div class="text">
+
+                                    <p class="card_title">Designing kawaii worlds: Spread joy threoug illustration</p>
+                                    <p class="name">Becky Cas</p>
+                                    <div class="info">
+                                        <p>3.3k</p>
+                                        <p>97% (38)</p>
+                                    </div>
+
+                                </div>
+                                <div class="price">
+                                    <p>9.99 US$</p>
+                                    <p class="discount">9.99 US$</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="categories">
+
+        <header><h1>Categories</h1></header>
+
+
+        <div class="categories_slider_container">
+            <div class="categories_slider">
+                <div class="categories_card">
+                    <img src="./img/julian-wan-WNoLnJo7tS8-unsplash.jpg" alt="">
+                    <div class="text">
+                        <p>Writing</p>
+                    </div>
+                </div>
+
+                <div class="categories_card">
+                    <img src="./img/ali-jouyandeh-bodgc6H44FA-unsplash.jpg" alt="">
+                    <div class="text">
+                        <p>Writing</p>
+                    </div>
+                </div>
+
+                <div class="categories_card">
+                    <img src="./img/tyler-nix-X2YO8KFxgEM-unsplash.jpg" alt="">
+                    <div class="text">
+                        <p>Writing</p>
+                    </div>
+                </div>
+
+                <div class="categories_card">
+                    <img src="./img/julian-wan-WNoLnJo7tS8-unsplash.jpg" alt="">
+                    <div class="text">
+                        <p>Writing</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
+
+    <section class="others" id="recommended">
+
+        <header>
+            <h1>Recommended</h1>
+            <button><a href="/recommended.html">
+                Show More
+            </a></button>
+        </header>
+
+        <div class="others_swiper_container">
 
             <div class="swipers others_swiper">
                 <div class="swiper-wrappers others_swiper_wrapper">
@@ -246,7 +435,6 @@
                     </div>
                 </div>
             </div>
-
 
         </div>
     </section>
