--- a/course.html
+++ b/course.html
@@ -26,18 +26,16 @@
 
 <div class="container">
 
-    <nav class="navigation">
+    <nav class="course_navigation">
         <a href="/">
             <button>
                 <i class="fa-solid fa-arrow-left-long"></i>
-                back
             </button>
         </a>
 
 
         <button>
             <i class="fa-solid fa-share-nodes"></i>
-            share
         </button>
     </nav>
 
@@ -77,106 +75,107 @@
             <div class="indicator"></div>
         </nav>
 
-        <section class="content">
+        <section class="content_wrapper">
+            <div class="content">
+
+                <div class="tab tab-1">
+
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate nemo nisi officia placeat quos!
+                        Atque
+                        cupiditate et facilis modi omnis optio, possimus ratione totam. Autem doloremque eos ipsa, natus
+                        nemo odio
+                        provident quibusdam, quisquam recusandae suscipit totam vitae volu
+                    </p>
+
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        sapiente sunt ullam vel velit!
+                    </p>
 
 
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        sapiente sunt ullam vel velit!
+                    </p>
 
-            <div class="tab tab-1">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        sapiente sunt ullam vel velit!
+                    </p>
 
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate nemo nisi officia placeat quos!
-                    Atque
-                    cupiditate et facilis modi omnis optio, possimus ratione totam. Autem doloremque eos ipsa, natus
-                    nemo odio
-                    provident quibusdam, quisquam recusandae suscipit totam vitae volu
-                </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        sapiente sunt ullam vel velit!
+                    </p>
 
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    sapiente sunt ullam vel velit!
-                </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        sapiente sunt ullam vel velit!
+                    </p>
+
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        sapiente sunt ullam vel velit!
+                    </p>
+
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        sapiente sunt ullam vel velit!
+                    </p>
+
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
+                        sapiente sunt ullam vel velit!
+                    </p>
 
 
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    sapiente sunt ullam vel velit!
-                </p>
+                </div>
 
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    sapiente sunt ullam vel velit!
-                </p>
+                <div class="tab tab-2">
 
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    sapiente sunt ullam vel velit!
-                </p>
+                    <h2 class="tab-title">Course Overview</h2>
 
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    sapiente sunt ullam vel velit!
-                </p>
+                    <ul class="items">
+                        <li class="item"><i class="fa-solid fa-video"></i>
+                            <p>17 lessons (3h 6m)</p></li>
+                        <li class="item"><i class="fa-solid fa-book"></i>
+                            <p>25 additional resources</p></li>
+                        <li class="item"><i class="fa-solid fa-pen-to-square"></i>
+                            <p>14 exercises</p></li>
+                        <li class="item"><i class="fa-solid fa-circle-check"></i>
+                            <p>final course project</p></li>
+                    </ul>
 
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    sapiente sunt ullam vel velit!
-                </p>
-
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    sapiente sunt ullam vel velit!
-                </p>
-
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores commodi consequatur
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    dolores enim error, est expedita fuga iure laudantium praesentium provident, quam qui ratione
-                    sapiente sunt ullam vel velit!
-                </p>
-
+                </div>
 
             </div>
-
-            <div class="tab tab-2">
-
-                <h2 class="tab-title">Course Overview</h2>
-
-                <ul class="items">
-                    <li class="item"><i class="fa-solid fa-video"></i>
-                        <p>17 lessons (3h 6m)</p></li>
-                    <li class="item"><i class="fa-solid fa-book"></i>
-                        <p>25 additional resources</p></li>
-                    <li class="item"><i class="fa-solid fa-pen-to-square"></i>
-                        <p>14 exercises</p></li>
-                    <li class="item"><i class="fa-solid fa-circle-check"></i>
-                        <p>final course project</p></li>
-                </ul>
-
-            </div>
-
         </section>
+
 
     </div>
 
@@ -191,7 +190,7 @@
         <div class="text">
             <h4>17.99$</h4>
             <h4> 72% Disc.</h4>
-            <span>64.99$</span>
+            <span class="prev_price">64.99$</span>
         </div>
 
 
