--- a/recommended.html
+++ b/recommended.html
@@ -28,10 +28,14 @@
 <body>
 <div id="container" class="recommended">
 
-    <nav>
-        <button><a href="/#recommended">back</a></button>
+    <nav class="recommended_nav">
+        <a href="/#recommended">
+            <button>
+                <i class="fa-solid fa-arrow-left-long"></i>
+            </button>
+        </a>
 
-        <p>Recommended</p>
+        <h1>Recommended</h1>
     </nav>
 
     <ul class="recommended_list">
